# vigiIA-safety

./: .env.example  .gitignore  README.md  ideia-hidrosat-monitoramento-acudes.md  ideia-vigia-seguranca-industrial-visao.md  intelliboard.config.json  package-lock.json  package.json
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/tests/: test_account_recovery.py  test_app_factory.py  test_auth.py  test_auth_persistence.py  test_contract_alignment.py  test_db.py  test_edge_worker_config.py  test_edge_worker_evidence.py  test_edge_worker_upload_url.py  test_edge_workers.py  test_edge_workers_persistence.py  test_evidence.py  test_evidence_repository_persistence.py  test_health.py  test_incident_idempotency_constraint.py  test_incident_repository_persistence.py  test_incident_store_integration.py  test_incidents.py  test_invites.py  test_jobs.py  test_live_stream.py  test_main_flow_http.py  test_members_http.py  test_observability.py  test_operations.py  test_operations_delete.py  test_operations_persistence.py  test_persistence_schema.py  test_platform_admin.py  test_postgres_integration_flows.py  test_rate_limit.py  test_rbac.py  test_rbac_dependencies.py  test_scheduler.py  test_security.py  test_seed_demo.py  test_seed_synthetic_incidents.py  test_seed_synthetic_incidents_postgres.py  test_settings.py  test_stream_validation.py  (+1 more)
apps/edge-worker/: Dockerfile  README.md  pyproject.toml
apps/edge-worker/assets/: .gitignore  README.md
apps/edge-worker/models/: .gitignore  README.md  manifest.json
(+301 files in other folders)
