[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-edge-worker"
version = "0.1.0"
description = "Prototype edge CV worker for VigIA Safety"
requires-python = ">=3.11"

# Dependências de visão computacional isoladas num extra: o core (protocolo, buffer,
# lógica pura) roda e é testado sem elas; o container instala com `.[cv]`.
[project.optional-dependencies]
cv = [
  "opencv-python-headless>=4.8",
  "numpy>=1.26",
  "ultralytics>=8.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
